forms | bug fixes & add kafbat ui
